Add 'tindog' project to 'works'

--- a/index.html
+++ b/index.html
@@ -94,6 +94,29 @@
         <p class="works-heading grey-large-text">Works</p>
         <h2 class="my-projects">Done Projects</h2>
         <div class="card">  
+            <h4 class="project-name">Tinder for dogs</h4>
+            <a 
+                href="https://papaya-froyo-44b739.netlify.app/"
+                target="_blank">
+                <img class="project-image" 
+                src="images/tindog.png" 
+                alt="screenshot of a puppy on yellow background">
+            </a>
+            <p 
+                class="project-description paragraph-text">
+                This mini app mimics one function of the Tinder app - swipe, but for dogs.
+                It helps reinforces my understanding of <span class="highlight-text"> constructor functions, classes</span>
+                and especially working in a local environment (VSCode) with<span class="highlight-text"> importing/exporting modules </span>.
+                There were quite a few challenges that I will talk about in my learning journal soon.
+            </p>
+            <a 
+                class="project-link" 
+                href="https://papaya-froyo-44b739.netlify.app/"
+                target="_blank">
+                view details
+            </a>
+        </div>
+        <div class="card">  
             <h4 class="project-name">Blog journal</h4>
             <a 
                 href="https://zippy-lebkuchen-116973.netlify.app/"
