--- a/index.html
+++ b/index.html
@@ -94,6 +94,32 @@
         <p class="works-heading grey-large-text">Works</p>
         <h2 class="my-projects">Done Projects</h2>
         <div class="card">  
+            <h4 class="project-name">RPG Game</h4>
+            <a 
+                href="https://aquamarine-daifuku-fa0861.netlify.app/"
+                target="_blank">
+                <img class="project-image" 
+                src="images/rpg-game.png" 
+                alt="picture of a game between a wizard and an orc">
+            </a>
+            <p 
+                class="project-description paragraph-text">
+                This is one of my Scrimba's learning projects. I faced quite a few challenges
+                understanding and applying the concepts introduced in this module. One of them being
+                the mechanic behind disabling the 'ATTACK' button in the 1.5s waiting time between monsters.
+                Aside from the key concept of <span class="highlight-text">constructor functions </span>, 
+                Others were also introduced including <span class="highlight-text">.reduce(), .map(), 
+                .join(), .fill(), arrow functions, Array constructor, and Ternary operator</span>.<br>
+                I applied some of these concepts in the previous project Tindog you can see right below.
+            </p>
+            <a 
+                class="project-link" 
+                href="https://aquamarine-daifuku-fa0861.netlify.app/"
+                target="_blank">
+                view details
+            </a>
+        </div>
+        <div class="card">  
             <h4 class="project-name">Tinder for dogs</h4>
             <a 
                 href="https://papaya-froyo-44b739.netlify.app/"
