--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
             <div class="about-sub-section">
                 <p 
                 class="about-text grey-text paragraph-text">
-                I've been learning to become a frontend developer for almost a year. 
-                I am experienced with 
+                I have been pursuing a career as a front-end developer for almost a year. 
+                My experience includes proficiency in 
                 <span class="highlight-text">HTML, CSS, and JavaScript</span>. 
-                I am familiar with 
-                <span class="highlight-text">OOP</span> 
-                and I've started getting my feet wet with 
-                <span class="highlight-text">React</span>.
-                <br>I am looking for an internship or a fresher role 
-                so I can learn from the experts. 
+                I am familiar with <span class="highlight-text">OOP concepts</span> 
+                and have begun to gain experience with <span class="highlight-text">React</span>.<br><br>
+                I am actively seeking an internship or entry-level position that will provide 
+                an opportunity to learn from experienced professionals in the field. 
                 </p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/dungtran83/" target="_blank">
@@ -104,13 +102,18 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                This is one of my Scrimba's learning projects. I faced quite a few challenges
-                understanding and applying the concepts introduced in this module. One of them being
-                the mechanic behind disabling the 'ATTACK' button in the 1.5s waiting time between monsters.
-                Aside from the key concept of <span class="highlight-text">constructor functions </span>, 
-                Others were also introduced including <span class="highlight-text">.reduce(), .map(), 
-                .join(), .fill(), arrow functions, Array constructor, and Ternary operator</span>.<br>
-                I applied some of these concepts in the previous project Tindog you can see right below.
+                This project I worked on is one of my learning exercises on Scrimba. 
+                It was challenging to grasp and implement some of the concepts introduced 
+                in this module, such as disabling the 'ATTACK' button during the 1.5s 
+                waiting time between monsters. 
+                However, I gained a better understanding of 
+                <span class="highlight-text">constructor functions</span> 
+                and also learned about other concepts such as 
+                <span class="highlight-text">.reduce(), .map(), .join(), 
+                .fill(), arrow functions, Array constructor, and the 
+                Ternary operator</span>.<br>
+                I was able to apply some of these concepts in a 
+                previous project called Tindog, which you can check out below.
             </p>
             <a 
                 class="project-link" 
@@ -130,10 +133,13 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                This mini app mimics one function of the Tinder app - swipe, but for dogs.
-                It helps reinforces my understanding of <span class="highlight-text"> constructor functions, classes</span>
-                and especially working in a local environment (VSCode) with<span class="highlight-text"> importing/exporting modules </span>.
-                There were quite a few challenges that I will talk about in my learning journal soon.
+                This mini application imitates one of the features of the Tinder app, 
+                but for dogs. It helped me solidify my understanding of 
+                <span class="highlight-text">functions, classes</span>, 
+                and the process of working with 
+                <span class="highlight-text">importing and exporting modules</span> in a 
+                local environment like VSCode. Although I faced several challenges 
+                while working on this project, I plan to reflect on them further in my learning journal.
             </p>
             <a 
                 class="project-link" 
@@ -153,12 +159,14 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                This blog joural is built with 3 web pages: Home, About, and A blog entry.
-                Aside from the normal stuff, I also used <span class="highlight-text">Grid </span> to make the layout responsive,
-                especially the properity of <span class="highlight-text">auto-fill </span> to make the entries apdapt to mobile 
-                screens. Another thing is <span class="highlight-text">JQuerry </span> which was compeltely new to me,
-                I used to make the navigation bar 
-                and the footer appear across pages. 
+                This blog journal consists of three web pages: Home, About, and a Blog Entry. 
+                In addition to the usual elements, I utilized 
+                <span class="highlight-text">Grid</span> to create a responsive layout, 
+                specifically utilizing the <span class="highlight-text">"auto-fill"</span> 
+                property to adapt for mobile screens. 
+                Another feature I incorporated was <span class="highlight-text">jQuery</span>, 
+                which was a new tool for me, to create a navigation bar and footer 
+                that appears consistently across all pages. 
             </p>
             <a 
                 class="project-link" 
@@ -174,17 +182,16 @@
                 target="_blank">
                 <img class="project-image" 
                 src="images/random-password-generator.png" 
-                alt="screenshot of a web app that generates two randome passwords">
+                alt="screenshot of a web app that generates two random passwords">
             </a>
             <p 
                 class="project-description paragraph-text">
-                Given a positive integer as the password length, 
-                the app will generate two random passwords that include 
-                letters, numbers, and special characters. <br>
-                At the core of this app is the usage of the
-                Math library's <code>random()</code> and <code>floor()</code> methods.
-                There is also a little copy button where users can click 
-                to copy the password to clipboard.
+                This application generates two random passwords 
+                that include letters, numbers, and special characters, 
+                based on user's input as the password length. 
+                The app utilizes the Math library's random() and floor() methods. 
+                Additionally, there is a copy buttons that allows users 
+                to easily copy the generated passwords to the clipboard.
             </p>
             <a 
                 class="project-link" 
@@ -204,11 +211,12 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                The app converts 3 types of measurements from Metric system 
-                to the Imperial one: Length, Volume, and Mass.
-                It will then display the converted units in both systems.
-                <br><br>This app highlights basic Math operations and DOM element manipulation.
-                It also reinforces the concept of rendering HTML elements using JavaScript.
+                This application converts three types of measurements 
+                from the Metric system to the Imperial system: Length, Volume, and Mass. 
+                The app displays the converted units in both systems for easy comparison.
+                This app emphasizes fundamental mathematical operations and manipulation 
+                of DOM elements. Additionally, it reinforces the concept of dynamically 
+                rendering HTML elements using JavaScript.
             </p>
             <a 
                 class="project-link" 
@@ -228,13 +236,12 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                This little app saves and your favorite emojis to a list.
-                You can add more to or remove emojis from the list
-                as you wish.
-                <br><br>This program highlights the applications of commonly used JavaScript methods: 
-                <code>unshift()</code>, <code>shift()</code>, and <code>unshift()</code>
-                to manipulate arrays.
-                It also helps me practice rendering HTML elements with JavaScript.
+                This application allows you to save your favorite emojis to a list, 
+                which you can easily add to or remove emojis from at any time.
+                The program showcases the practical applications of commonly-used JavaScript methods 
+                such as push(), pop() unshift(), shift(), and unshift(), 
+                which enable you to manipulate arrays. 
+                Additionally, it provides an opportunity to practice rendering HTML elements using JavaScript.
             </p>
             <a 
                 class="project-link" 
@@ -254,13 +261,12 @@
             </a>
             <p 
                 class="project-description paragraph-text">
-                A game scoreboard where users can enter scores for 
-                their favorite team. The New Game button will reset 
-                the scores to zero.
-                <br><br>This is one of my first experiences working
-                with JavaScript. It helps me practice the basic concepts 
-                such as variables, string concatenation, incrementing and decrementing.
-
+                This application provides a scoreboard for a game, 
+                allowing users to enter scores for their favorite team. 
+                The "New Game" button resets the scores to zero.<br>
+                As one of my earliest experiences working with JavaScript, 
+                this program helped me practice fundamental concepts such as variables, 
+                string concatenation, and incrementing and decrementing values.
             </p>
             <a 
             class="project-link" 
