Added 2 new projects

--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
             <div class="about-sub-section">
                 <p 
                 class="about-text grey-text paragraph-text">
-                I have been pursuing a career as a front-end developer for almost a year. 
+                I'm a markerter making a transitioning into Web Development. I have been learning as a Front-end Web Developer for almost a year. 
                 My experience includes proficiency in 
                 <span class="highlight-text">HTML, CSS, and JavaScript</span>. 
-                I am familiar with <span class="highlight-text">OOP concepts</span> 
+                I understand  <span class="highlight-text">OOP concepts</span> 
                 and have begun to gain experience with <span class="highlight-text">React</span>.<br><br>
-                I am actively seeking an internship or entry-level position that will provide 
-                an opportunity to learn from experienced professionals in the field. 
+                I am actively seeking a role that helps with this transition. 
                 </p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/dungtran83/" target="_blank">
@@ -74,8 +73,8 @@
             <h2 class="my-skills">Some of my skills</h2>
         <ul>
             <li class="paragraph-text">Experienced in <span class="highlight-text">HTML, CSS, JavaScript </span></li>
-            <li class="paragraph-text">Basic exposure with <span class="highlight-text">React </span> 
-                and <span class="highlight-text">Git version control</span></li>
+            <li class="paragraph-text">Exposure to <span class="highlight-text">React, </span> 
+                <span class="highlight-text">Git version control</span>, and <span class="highlight-text">Firebase</span></span></li>
             <li class="paragraph-text">Good <span class="highlight-text">problem-solving </span>skills and ability to work in a team environment</li>
             <li class="paragraph-text">Excellent 
                 <span class="highlight-text">communication </span>
@@ -91,6 +90,62 @@
     <section id="works">
         <p class="works-heading grey-large-text">Works</p>
         <h2 class="my-projects">Done Projects</h2>
+
+        <!-- benkaz3-twitter-clone.netlify.app -->
+        <div class="card">  
+            <h4 class="project-name">Twitter Clone</h4>
+            <a 
+                href="https://benkaz3-twitter-clone.netlify.app/"
+                target="_blank">
+                <img class="project-image" 
+                src="images/twitter-clone.png" 
+                alt="screenshot of a Twitter clone page">
+            </a>
+            <p 
+                class="project-description paragraph-text">
+                This Twitter Clone project demonstrates event handling, array manipulation, DOM manipulation, 
+                local storage, and rendering. It utilizes event listeners to handle 
+                various click events and performs actions based on the clicked element's dataset or ID. <br>
+                Array methods like <code>filter</code> and <code>forEach</code> are used to manipulate and 
+                iterate over the tweet data. The code dynamically generates HTML content 
+                for tweets and their details, such as likes, retweets, and replies, 
+                and updates the DOM accordingly. It also utilizes local storage to save 
+                and retrieve tweet data, allowing for persistence across sessions.  
+            </p>
+            <a 
+                class="project-link" 
+                href="https://benkaz3-twitter-clone.netlify.app/"
+                target="_blank">
+                view details
+            </a>
+        </div>
+        <div class="card">  
+            <h4 class="project-name">Movie Search</h4>
+            <a 
+                href="https://benkaz3-movie-search.netlify.app/"
+                target="_blank">
+                <img class="project-image" 
+                src="images/movie-search.png" 
+                alt="screenshot of a movie search webpage">
+            </a>
+            <p 
+                class="project-description paragraph-text">
+                You can search for a movie and add it to your watchlist. <br>
+                The code retrieves and displays a list of movies based on user input. 
+                It utilizes event handling, API requests, array manipulation, DOM manipulation, 
+                local storage, and rendering. <br>
+                The user's keyword is used to fetch movie data from the OMDb API, 
+                and the fetched movies are rendered dynamically on the page. 
+                The code also allows movies to be added to a watchlist and 
+                stores movie data in local storage for persistence.
+            </p>
+            <a 
+                class="project-link" 
+                href="https://benkaz3-movie-search.netlify.app/"
+                target="_blank">
+                view details
+            </a>
+        </div>
         <div class="card">  
             <h4 class="project-name">RPG Game</h4>
             <a 
