--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="about-sub-section">
                 <p 
                 class="about-text grey-text paragraph-text">
-                I'm a markerter making a transitioning into Web Development. I have been learning as a Front-end Web Developer for almost a year. 
+                I'm a markerter transitioning into Web Development. I have been learning as a Front-end Web Developer for almost a year. 
                 My experience includes proficiency in 
                 <span class="highlight-text">HTML, CSS, and JavaScript</span>. 
                 I understand  <span class="highlight-text">OOP concepts</span> 
